fixed alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -71,11 +71,17 @@ a:hover {
 .button1 {
     grid-row: 2;
     grid-column: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .button2 {
     grid-row: 2;
     grid-column: 4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .or {
@@ -92,7 +98,7 @@ a:hover {
     border: 4px solid white;
     background: none;
     font-size: 40px;
-    border-radius: 15px
+    border-radius: 15px;
 }
 
 .img {
